Fixed layout issues, added SVG fill and arrows

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h4:not(#name) {
 
 svg {
   max-width:100px;
-  fill: purple;
+  fill: white;
 }
 
 img{
@@ -63,7 +63,7 @@ img{
 }
 
 .header h1 {
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin-right: auto
 }
 
@@ -87,7 +87,7 @@ header svg, nav svg {
   fill: white;
 }
 #notifications {
-  padding-right: 40px;
+  padding-right: 5vw;
   border-right: 2px solid purple;
   display:flex;
   flex-direction: row;
@@ -136,7 +136,7 @@ nav a {
 }
 
 nav svg {
-  max-width: 50px
+  width: 40px
 }
 
 /* ------ DASHBOARD & ALERT ------ */
@@ -165,6 +165,7 @@ ul  {
   display: flex;
   justify-content: space-around;
   list-style: none;
+  padding-left: 0px;
 }
 
 /* ------ CHARTS SECTIONS ------ */
@@ -173,9 +174,7 @@ ul  {
   border-bottom: 1px solid lavender;
 }
 
-.traffic widget-container-full, .daily
-
-ul {
+.traffic widget-container-full, .daily ul {
   padding-left: 0px;
 }
 ul li {
@@ -201,12 +200,17 @@ ul li {
   margin: 1rem 0;
 }
 .social-img{
+  display: flex;
+  justify-content: center;
   align-self: center;
-  padding-left: 10px;
+  margin-left: 10px;
+  background-color: purple;
+  border-radius: 50%;
+  padding: 10px;
 }
 
 .social-img svg {
-  width: 75px;
+  width: 45px;
 }
 
 .social-stats {
@@ -243,6 +247,11 @@ ul li {
 .activity-container:last-child {
   padding-bottom: 0px;
   border-bottom: 0px;
+}
+
+.fas {
+  margin-left: auto;
+  display:none;
 }
 
 /* ------ CONTACT ------ */
@@ -311,7 +320,7 @@ button {
 
 @media screen and (min-width:768px) {
   body {
-     grid-template-columns: 7vw auto;
+     grid-template-columns: 6vw auto;
      grid-template-rows: auto;
      grid-template-areas:
      'header header'
@@ -328,12 +337,13 @@ button {
 
    main {
      display: grid;
-     grid-auto-columns: 1fr 1fr;
+     grid-auto-columns: 47vw 47vw;
    }
    .chart, .stats {
      padding: 20px 0;
    }
-   .main-headline, #alert, .main-headline,  .main-dashboard, .alert, .traffic, .stats, .activity, .members, .contact, .settings {
+   .main-headline, #alert, .main-headline,  .main-dashboard, .alert,
+   .traffic, .stats, .activity, .members, .contact, .settings {
      grid-column: 1 / span 2;
    }
 
@@ -343,6 +353,7 @@ button {
 
    .mobile {
      grid-column: 2 / span 1;
+     border-left: 1px solid lavender;
    }
    .widget-container-full {
      width: 88vw;
@@ -402,12 +413,15 @@ button {
      display:flex;
      flex-direction: row;
      align-items: center;
-     justify-content: center;
-     height: 12vw;
+     height: 20vh;
    }
 
    .members-text, .activity-text {
      padding: 0 15px;
+   }
+   .fas {
+     margin-left: auto;
+     display:inline;
    }
 
    .members-text > *, .activity-text > * {
@@ -417,10 +431,10 @@ button {
    .members-container p {
      margin-left: auto;
    }
-   .contact, .settings {
-     width: 45vw;
-   }
 
+   .contact, .settings {
+     width: 93vw;
+   }
    select {
      width: 100%;
    }
@@ -437,10 +451,15 @@ button {
   nav svg {
     max-width: 100px;
   }
-  .mobile {
-      border-left: 1px solid lavender;
-    }
+
     .activity {
     border-left: 1px solid #fff;
   }
+  .contact, .settings {
+    width: 47vw;
+  }
+  .settings {
+    border-left:  1px solid lavender;
+  }
+
 }
